; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_core.c_uv_os_getenv.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_core.c_uv_os_getenv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UV_EINVAL = common dso_local global i32 0, align 4
@UV_ENOENT = common dso_local global i32 0, align 4
@UV_ENOBUFS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_os_getenv(i8* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %22, label %12

12:                                               ; preds = %3
  %13 = load i8*, i8** %6, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %22, label %15

15:                                               ; preds = %12
  %16 = load i64*, i64** %7, align 8
  %17 = icmp eq i64* %16, null
  br i1 %17, label %22, label %18

18:                                               ; preds = %15
  %19 = load i64*, i64** %7, align 8
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18, %15, %12, %3
  %23 = load i32, i32* @UV_EINVAL, align 4
  store i32 %23, i32* %4, align 4
  br label %51

24:                                               ; preds = %18
  %25 = load i8*, i8** %5, align 8
  %26 = call i8* @getenv(i8* %25)
  store i8* %26, i8** %8, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = icmp eq i8* %27, null
  br i1 %28, label %29, label %31

29:                                               ; preds = %24
  %30 = load i32, i32* @UV_ENOENT, align 4
  store i32 %30, i32* %4, align 4
  br label %51

31:                                               ; preds = %24
  %32 = load i8*, i8** %8, align 8
  %33 = call i64 @strlen(i8* %32)
  store i64 %33, i64* %9, align 8
  %34 = load i64, i64* %9, align 8
  %35 = load i64*, i64** %7, align 8
  %36 = load i64, i64* %35, align 8
  %37 = icmp uge i64 %34, %36
  br i1 %37, label %38, label %43

38:                                               ; preds = %31
  %39 = load i64, i64* %9, align 8
  %40 = add i64 %39, 1
  %41 = load i64*, i64** %7, align 8
  store i64 %40, i64* %41, align 8
  %42 = load i32, i32* @UV_ENOBUFS, align 4
  store i32 %42, i32* %4, align 4
  br label %51

43:                                               ; preds = %31
  %44 = load i8*, i8** %6, align 8
  %45 = load i8*, i8** %8, align 8
  %46 = load i64, i64* %9, align 8
  %47 = add i64 %46, 1
  %48 = call i32 @memcpy(i8* %44, i8* %45, i64 %47)
  %49 = load i64, i64* %9, align 8
  %50 = load i64*, i64** %7, align 8
  store i64 %49, i64* %50, align 8
  store i32 0, i32* %4, align 4
  br label %51

51:                                               ; preds = %43, %38, %29, %22
  %52 = load i32, i32* %4, align 4
  ret i32 %52
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
